[package]
name = "pufferfish"
version = "0.1.0"
authors = ["lunabunn <iamrabbitmoon@gmail.com>"]
edition = "2021"
description = "An opinionated 2D game library"
repository = "https://github.com/pufferfish-rs/pufferfish/"
license = "Zlib OR MIT OR Apache-2.0"

[dependencies]
etagere = "0.2.7"
fontdue = "0.7.2"
fugu = { git = "https://github.com/pufferfish-rs/fugu", rev = "92098f6" }
png-decoder = { version = "0.1.0", optional = true }
sdl2 = { version = "0.35.2", features = ["bundled"] }

[features]
default = ["png-decoder"]
