[package]
name = "pufferfish"
version = "0.1.0"
authors = ["lunabunn <iamrabbitmoon@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "An opinionated 2D game library"
repository = "https://github.com/pufferfish-rs/pufferfish/"
license = "Zlib OR MIT OR Apache-2.0"

[dependencies]
etagere = { version = "0.2.7", optional = true }
fontdue = { version = "0.7.2", optional = true }
fugu = { git = "https://github.com/pufferfish-rs/fugu", rev = "92098f6" }
png-decoder = { version = "0.1.0", optional = true }
sdl2 = { version = "0.35.2", features = ["bundled"] }

[features]
default = ["png-decoder", "text"]
text = ["dep:etagere", "dep:fontdue"]

[[example]]
name = "hello_world"
required-features = ["png-decoder", "text"]
