[package]
name = "pufferfish"
version = "0.1.1"
authors = ["lunabunn <iamrabbitmoon@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "An opinionated 2D game framework"
repository = "https://github.com/pufferfish-rs/pufferfish/"
license = "Zlib OR MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
etagere = { version = "0.2.7", optional = true }
fontdue = { version = "0.7.2", optional = true }
fugu = "0.1.0"
hashbrown = "0.12.3"
sdl2 = { version = "0.35.2", features = ["bundled"] }

[features]
default = ["text"]
text = ["dep:etagere", "dep:fontdue"]
